Fix theme-toggle v-align issues

--- a/app/styles/components/sidebar-menu.scss
+++ b/app/styles/components/sidebar-menu.scss
@@ -161,10 +161,6 @@
     margin-right: 10px;
   }
 
-  &.theme-toggle {
-    padding-top: 0;
-  }
-
   &:hover {
     &__title {
       color: var(--primary-text-color);
